src/objects/Error_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings that control your error management configuration.</description>
    <fields>
        <fullName>Disable_Error_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, QPMS&apos;s error handling framework is disabled.</description>
        <inlineHelpText>If checked, QPMS&apos;s error handling framework is disabled.</inlineHelpText>
        <label>Disable Error Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn this on to enable debug statements in managed package code.</description>
        <inlineHelpText>Turn this on to enable debug statements in managed package code.</inlineHelpText>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Notifications_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether to send error notifications.</description>
        <inlineHelpText>Check this if you&apos;d like the system to post notifications for certain type of errors.</inlineHelpText>
        <label>Error Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Notifications_To__c</fullName>
        <description>Who should receive error notifications.</description>
        <inlineHelpText>Select the type of user to send notifications to.</inlineHelpText>
        <label>Error Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Store_Errors_On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether errors are going to be stored in the database.</description>
        <inlineHelpText>Check this if you&apos;d like errors to be stored in the database.</inlineHelpText>
        <label>Store Errors</label>
        <type>Checkbox</type>
    </fields>
    <label>Error Settings</label>
</CustomObject>